# shinobot

./: Cargo.toml
src/: checks.rs  groups.rs  hooks.rs  lib.rs  main.rs
src/commands/: complicated.rs  emoji.rs  help.rs  mod.rs  owner.rs
