[package]
name = "shinobot"
version = "0.1.0"
authors = ["qw3rty01 <qw3rty01@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"

[dependencies.rcir]
git = "https://github.com/qwerty01/rcir.git"
branch = "main"

[dependencies.serenity]
version = "0.10"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
